src/css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    font-size: 1.15vw;
}

body {
    /* sets the page */
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
    grid-template-areas: "head"
                         "calc";

    /* style */
    background-color: rgba(255,0,176,0.15);
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

#calc {
    grid-area: calc;

    /* sets the page */
    display: block;

    /* style */
    height: 100%;
    width: 100%;
}

#LM {
    grid-area: LM;

    /* sets the page */
    display: grid;
    grid-template-areas: "inv out"
                         "inv chart";
    grid-template-columns: 1fr 4.527fr;
    grid-template-rows: repeat(2, auto);

    /* style */
    height: 100%;
    width: 100%;
    overflow: hidden;
}

#investment, #outcome, #plot {
    /* style */
    background-color: rgba(240,240,240,1);
    border-radius: 2rem;
    box-shadow: -5px -5px 15px 5px rgba(250, 250, 250, 1),
                5px 5px 15px 5px rgba(75, 75, 75, 1);
    margin: 1rem 1rem;
    padding: 0 1rem 0.5rem 1rem;
    align-items: center;
    //justify-items: center;
}

h2 {
    text-align: center;
    color: rgba(255,0,176,1);
    font-size: 0.9rem;
    font-family: SUB;
    margin-top: -0.25rem;
    margin-bottom: 0.25rem;
}

hr {
    //margin-top: 2.5rem;
    //margin-bottom: 2.5rem;
    height: 1px;
    border: 0;
    background-color: rgba(200,200,200,1);
}

h3 {
    text-align: center;
    font-weight: normal;
    font-size: 0.7rem;
    font-family: KEYS;
}

.line {
    border: 0.1rem solid rgba(200, 200, 200, 1);
}

.title {
    /* position */
    display: flex;
    text-align: left;
    align-items: center;
    justify-content: start;

    /* style */
    font-size: 0.7rem;
    font-family: KEYS;
}

.input {
    /* position */
    display: grid;
    grid-template-columns: 2.25rem 1fr;
    gap: 0rem;
    align-items: center;

    /* style */
    border: 1px;
    background-color: white;
    border-style: inset;
    border-radius: 2rem;
    border-color: rgba(200,200,200,0.25);
    box-shadow: inset 0.1em 0.1em rgba(150, 150, 150, 1),
             0 0 0 2px rgb(255,255,255),
             0.3em 0.3em 0.5em rgba(0,0,0,0.3);
    color: rgba(255,0,176,1);
    font-weight: bold;
    margin: 0 0.5rem;
    padding: 0.15rem 0.5rem 0.15rem 0.5rem;
    text-align: left;
}

.auto {
    /* style */
    background-color: rgba(140,140,140,1);
    box-shadow: inset 0.1em 0.1em rgba(50, 50, 50, 1),
             0 0 0 2px rgb(255,255,255),
             0.3em 0.3em 0.5em rgba(0,0,0,0.3);
}

.auto > input {
    color: white !important;
    -webkit-text-fill-color: white !important; /* Override iOS / Android font color change */
    -webkit-opacity:1; /* Override iOS opacity change affecting text & background color */
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.inputtext {
    /* style */
    font-size: 1rem;
    min-width: 0;
    height: 1rem;
    border: none;
    outline: none;
    color: inherit;
    background-color: inherit;
    background-clip: content-box;
}

.select2-selection__rendered > img, .input > img, .title > img, .prices > img, .input .auto > * {
    width: 1.17rem;
    height: 1.17rem;
    vertical-align: middle;
}

.input > .title > img {
    margin-left: -0.25rem;
}

div[name="Currency"], .investmentTag, .empty, #select2-CurrencyValue-container {
    font-size: 1.2rem;
    width: 1.17rem;
    height: 1.17rem;
    vertical-align: middle;
}

.flat {
    display: contents;
}


.hidden {
    display: none;
}

